# fastapi-contact-project

./: .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/api/: auth_users.py  contacts.py
app/auth/: au.py  auth.py  email.py
app/conf/: config.py
app/crud/: contact_crud.py
app/database/: db.py
app/models/: contact_model.py  db_models.py  user_models.py
app/tests/: test_functional_contacts.py  test_unit_contacts.py
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 0d0bca7f3dca_init.py  34956da562ea_init.py  8e347ffa9561_init.py  96f18cf613ff_init.py  9cfcef1f4301_init.py
